--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,23 +23,22 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --manifest-path ./main/Cargo.toml --verbose
       # Test the library one last time before packaging and publishing
       - name: Download Roberta language files
         run: |
           ./scripts/download_lang_files.sh --verbose --dir ${DATA_DIR}
+      - name: Download Gutenberg benchmark files
+        run: |
+          ./scripts/download_bench_files.sh --verbose --dir ${DATA_DIR}
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --release --manifest-path ./main/Cargo.toml --verbose --all-features
+          args: --release --verbose --all-features
       - uses: actions-rs/cargo@v1
         with:
           command: package
-          args: --manifest-path ./main/Cargo.toml --verbose
+          args: --verbose
       - uses: actions-rs/cargo@v1
         with:
           command: publish
-          args: --manifest-path ./main/Cargo.toml --verbose --token ${{ secrets.CRATES_IO_TOKEN }}
+          args: --verbose --token ${{ secrets.CRATES_IO_TOKEN }}
